--- a/app/src/main/res/anim/slide_up.xml
+++ b/app/src/main/res/anim/slide_up.xml
@@ -2,9 +2,14 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <translate
-        android:duration="300"
+        android:duration="200"
         android:fromYDelta="100%"
         android:interpolator="@android:anim/accelerate_interpolator"
-        android:toXDelta="0" />
+        android:toYDelta="0" />
+    <alpha
+        android:fromAlpha="0"
+        android:toAlpha="1"
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:duration="200"/>
 
 </set>
