--- a/app/src/main/res/drawable/background_white_conner.xml
+++ b/app/src/main/res/drawable/background_white_conner.xml
@@ -3,8 +3,19 @@
   ~ Created at 10/3/19 10:26 PM by Khoa
   -->
 
-<shape xmlns:app="http://schemas.android.com/apk/res-auto"
+<selector xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="10dp"/>
-    <solid android:color="@color/colorWhite"/>
-</shape>
+    <item android:state_pressed="true">
+        <shape>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/colorBlack5"/>
+        </shape>
+    </item>
+
+    <item>
+        <shape>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/colorWhite"/>
+        </shape>
+    </item>
+</selector>
