--- a/app/src/main/res/layout/activity_chi_tiet_thong_bao.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_thong_bao.xml
@@ -49,10 +49,9 @@
     <View
         android:id="@+id/separate"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="10dp"
+        android:layout_height="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:background="@color/colorBlack5"
         app:layout_constraintTop_toBottomOf="@id/txt_time"/>
 
     <ScrollView
