--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -23,7 +23,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="16dp"
-        android:background="@drawable/background_clickable"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/background_white_conner"
         tools:showIn="@layout/fragment_thongbao">
 
         <TextView
