--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/ghi_chu"
         android:title="Ghi chú"
         app:showAsAction="always"/>
-    <item android:id="@+id/page_home"
+    <item android:id="@+id/page_thongbao"
         android:icon="@drawable/thong_bao"
         android:title="Thông báo"
         app:showAsAction="always"/>
