--- a/app/src/main/res/layout/activity_xem_diem.xml
+++ b/app/src/main/res/layout/activity_xem_diem.xml
@@ -97,15 +97,6 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:paddingStart="20dp"
-                        android:text="Tổng quan"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:textColor="@color/colorBlack50" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -140,84 +131,75 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="10dp"
-                        android:paddingEnd="10dp"
                         android:layout_marginTop="20dp"
                         android:orientation="horizontal">
 
-                        <androidx.cardview.widget.CardView
+                        <LinearLayout
+                            android:id="@+id/layout_hoc_lai"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dp"
                             android:layout_weight="1"
-                            android:layout_marginEnd="5dp"
-                            app:cardElevation="0dp"
-                            app:cardCornerRadius="15dp"
-                            app:cardUseCompatPadding="false">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
+                            android:background="@drawable/background_gray_conner"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="10dp"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+                            <ImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginStart="20dp"
+                                android:src="@drawable/icon_hoc_lai"/>
+                            <TextView
+                                android:id="@+id/txt_hoc_lai"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/background_color_black5_conner"
-                                android:orientation="horizontal"
-                                android:padding="10dp">
+                                android:gravity="center"
+                                android:text="2"
+                                android:layout_marginStart="10dp"
+                                android:textStyle="bold"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="20sp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="5dp"
+                                android:text="học lại"
+                                android:textColor="@color/colorBlack75"/>
+                        </LinearLayout>
 
-                                <TextView
-                                    android:id="@+id/tiLeQua"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="20%"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="22sp"
-                                    android:textStyle="bold"
-                                    android:layout_marginStart="10dp"/>
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="qua"
-                                    android:textColor="@color/colorBlack75"
-                                    android:layout_marginStart="10dp"
-                                    android:textSize="13sp"/>
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
+                        <LinearLayout
+                            android:id="@+id/layout_hoc_cai_thien"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="45dp"
                             android:layout_weight="1"
-                            android:layout_marginStart="5dp"
-                            app:cardElevation="0dp"
-                            app:cardCornerRadius="15dp"
-                            app:cardUseCompatPadding="false">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
+                            android:background="@drawable/background_gray_conner"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="20dp"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+                            <ImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginStart="20dp"
+                                android:src="@drawable/icon_hoc_cai_thien"/>
+                            <TextView
+                                android:id="@+id/txt_hoc_cai_thien"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/background_color_black5_conner"
-                                android:orientation="horizontal"
-                                android:padding="10dp">
+                                android:gravity="center"
+                                android:text="0"
+                                android:layout_marginStart="10dp"
+                                android:textStyle="bold"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="20sp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="5dp"
+                                android:text="học cải thiện"
+                                android:textColor="@color/colorBlack75"/>
+                        </LinearLayout>
 
-                                <TextView
-                                    android:id="@+id/tiLeHocBong"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="0%"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="22sp"
-                                    android:textStyle="bold"
-                                    android:layout_marginStart="10dp"/>
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="học bổng"
-                                    android:textColor="@color/colorBlack75"
-                                    android:layout_marginStart="10dp"
-                                    android:textSize="13sp"/>
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
                     <com.github.mikephil.charting.charts.LineChart
@@ -228,15 +210,75 @@
 
                     </com.github.mikephil.charting.charts.LineChart>
 
-                    <TextView
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@color/colorBlack5"/>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal"
                         android:paddingStart="20dp"
-                        android:text="Điểm theo học kỳ"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:textColor="@color/colorBlack50" />
+                        android:paddingTop="10dp"
+                        android:paddingEnd="10dp"
+                        android:paddingBottom="10dp">
 
+                        <TextView
+                            android:id="@+id/txt_ten_mon_hoc"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="5"
+                            android:text="Tên môn học"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorAccentDark" />
+
+                        <TextView
+                            android:id="@+id/txt_stc"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="STC"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorAccentDark"/>
+
+                        <TextView
+                            android:id="@+id/txt_diem_thi10"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="Thi"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorAccentDark" />
+
+                        <TextView
+                            android:id="@+id/txt_tong_ket4"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="TK4"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorAccentDark"/>
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorBlack5"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_hoc_ky"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"/>
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
