--- a/app/src/main/res/layout/dialog_monhoc.xml
+++ b/app/src/main/res/layout/dialog_monhoc.xml
@@ -42,6 +42,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="13sp"
             android:text="@{viewModel.getThoiGian()}"/>
 
 <!--        nhom-->
